Fixed spacing between data tables

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -56,14 +56,14 @@
 }
 
 #tableDiv {
-  margin-left: 5%;
+  margin-left: 2%;
   margin-top: 40px; 
   float: left;
   text-align:center;
 }
 
 #tableDiv2 {
-  margin-right: 5%;
+  margin-right: 2%;
   margin-top: 40px;
   float: right; 
   text-align:center;
